<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_preference_title">About</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_autofill_username">Autofill username</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_disable_launcher_icon">Disable Launcher Icon</string>
    <string name="action_enable_launcher_icon">Enable Launcher Icon</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="action_no">No</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="action_save_to_file">Save To File</string>
    <string name="action_select_url">Select URL</string>
    <string name="action_share">Share</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_styling_install">Install</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="action_yes">Yes</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_name">Termux</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_body">Termux was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_not_primary_user_message">"Termux can only be run as the primary user. 
Bootstrap binaries compiled for Termux have hardcoded $PREFIX path and cannot be installed under any path other than %1$s."</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy">Copy</string>
    <string name="copy_text">Copy</string>
    <string name="donate_preference_title">Donate</string>
    <string name="error_allow_external_apps_ungranted">%1$s requires `allow-external-apps` property to be set to `true` in `%2$s` file.</string>
    <string name="error_app_not_installed_or_disabled_warning">The %1$s (%2$s) app is not installed or is disabled.</string>
    <string name="error_disable_component_failed">Failed to enable %1$s/%2$s component</string>
    <string name="error_display_over_other_apps_permission_not_granted">Termux requires \"Display over other apps\" permission to start terminal sessions from background on Android >= 10. Grants it from Settings -> Apps -> Termux -> Advanced</string>
    <string name="error_enable_component_failed">Failed to enable %1$s/%2$s component</string>
    <string name="error_exception_received_while_executing_termux_session_command">"Exception received while to executing \"%1$s\" termux session command.
Exception: %2$s"</string>
    <string name="error_exception_received_while_executing_termux_task_command">"Exception received while to executing \"%1$s\" termux task command.
Exception: %2$s"</string>
    <string name="error_execution_cancelled">Execution has been cancelled since execution service is being killed</string>
    <string name="error_failed_to_execute_termux_session_command">Failed to execute \"%1$s\" termux session command</string>
    <string name="error_failed_to_execute_termux_task_command">Failed to execute \"%1$s\" termux task command</string>
    <string name="error_get_component_state_failed">Failed to get %1$s/%2$s component state</string>
    <string name="error_get_package_context_failed_message">Failed to get package context for the \"%1$s\" package. This may be because the app package is not installed or it has different APK signature from the current app. Check install instruction at %2$s for more details.</string>
    <string name="error_get_package_context_failed_title">Failed To Get Package Context</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_sending_sigkill_to_process">Sending SIGKILL to process on user request or because android is killing the execution service</string>
    <string name="error_styling_not_installed">The Termux:Styling Plugin App is not installed.</string>
    <string name="error_termux_app_package_context_not_accessible">The Termux app (package context) is not accessible.</string>
    <string name="error_termux_prefix_dir_path_not_accessible">The Termux app $PREFIX directory is not accessible by the %1$s app. This may be because you have not installed or setup Termux app or Termux app and %1$s app both have different APK signatures because you have managed to install both apps from different sources. It may also be because Termux $PREFIX directory \"/data/data/com.termux/files/usr\" does not exist or does not have read, write and execute permissions.</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="log_level_debug">Debug</string>
    <string name="log_level_normal">Normal</string>
    <string name="log_level_off">Off</string>
    <string name="log_level_title">Log Level</string>
    <string name="log_level_unknown">*Unknown*</string>
    <string name="log_level_value">Logcat log level set to \"%1$s\"</string>
    <string name="log_level_verbose">Verbose</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="message_sudo_please_grant_permissions">Please grant permissions on next screen</string>
    <string name="termux_api_preferences_summary">Preferences for Termux:API app</string>
    <string name="termux_api_preferences_title">Termux:API</string>
    <string name="termux_float_preferences_summary">Preferences for Termux:Float app</string>
    <string name="termux_float_preferences_title">Termux:Float</string>
    <string name="termux_preferences_summary">Preferences for Termux app</string>
    <string name="termux_preferences_title">Termux</string>
    <string name="termux_tasker_preferences_summary">Preferences for Termux:Tasker app</string>
    <string name="termux_tasker_preferences_title">Termux:Tasker</string>
    <string name="termux_widget_preferences_summary">Preferences for Termux:Widget app</string>
    <string name="termux_widget_preferences_title">Termux:Widget</string>
</resources>