<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxPreferencesFragment"
        app:key="termux"
        app:summary="@string/termux_preferences_summary"
        app:title="@string/termux_preferences_title" />
    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxAPIPreferencesFragment"
        app:isPreferenceVisible="false"
        app:key="termux_api"
        app:summary="@string/termux_api_preferences_summary"
        app:title="@string/termux_api_preferences_title" />
    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxFloatPreferencesFragment"
        app:isPreferenceVisible="false"
        app:key="termux_float"
        app:summary="@string/termux_float_preferences_summary"
        app:title="@string/termux_float_preferences_title" />
    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxTaskerPreferencesFragment"
        app:isPreferenceVisible="false"
        app:key="termux_tasker"
        app:summary="@string/termux_tasker_preferences_summary"
        app:title="@string/termux_tasker_preferences_title" />
    <Preference
        app:fragment="com.termux.app.fragments.settings.TermuxWidgetPreferencesFragment"
        app:isPreferenceVisible="false"
        app:key="termux_widget"
        app:summary="@string/termux_widget_preferences_summary"
        app:title="@string/termux_widget_preferences_title" />
    <Preference
        app:key="about"
        app:persistent="false"
        app:title="@string/about_preference_title" />
    <Preference
        app:isPreferenceVisible="false"
        app:key="donate"
        app:persistent="false"
        app:title="@string/donate_preference_title" />
</PreferenceScreen>