<?xml version="1.0" encoding="utf-8"?>
<shortcuts
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:icon="@drawable/ic_new_session"
        android:enabled="true"
        android:shortcutId="new_session"
        android:shortcutShortLabel="@string/action_new_session">
        <intent
            android:name="android.shortcut.conversation"
            android:targetPackage="com.termux"
            android:action="android.intent.action.RUN"
            android:targetClass="com.termux.app.TermuxActivity" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_new_session"
        android:enabled="true"
        android:shortcutId="new_failsafe_session"
        android:shortcutShortLabel="@string/action_new_session_failsafe">
        <intent
            android:name="android.shortcut.conversation"
            android:targetPackage="com.termux"
            android:action="android.intent.action.RUN"
            android:targetClass="com.termux.app.TermuxActivity">
            <extra
                android:name="com.termux.app.failsafe_session"
                android:value="true" />
        </intent>
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_settings"
        android:enabled="true"
        android:shortcutId="settings"
        android:shortcutShortLabel="@string/action_open_settings">
        <intent
            android:name="android.shortcut.conversation"
            android:targetPackage="com.termux"
            android:action="android.intent.action.VIEW"
            android:targetClass="com.termux.app.activities.SettingsActivity" />
    </shortcut>
</shortcuts>