<?xml version="1.0" encoding="utf-8"?>
<com.termux.app.terminal.TermuxActivityRootView
    android:orientation="vertical"
    android:id="@id/activity_termux_root_view"
    android:fitsSystemWindows="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:orientation="vertical"
        android:id="@id/activity_termux_root_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginLeft="3.0dip"
        android:layout_marginTop="0.0dip"
        android:layout_marginRight="3.0dip"
        android:layout_marginBottom="0.0dip"
        android:layout_weight="1.0"
        android:layout_marginHorizontal="3.0dip"
        android:layout_marginVertical="0.0dip">
        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@id/drawer_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/terminal_toolbar_view_pager"
            android:layout_alignParentTop="true">
            <com.termux.view.TerminalView
                android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
                android:id="@id/terminal_view"
                android:focusableInTouchMode="true"
                android:scrollbars="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:defaultFocusHighlightEnabled="false" />
            <LinearLayout
                android:layout_gravity="start"
                android:orientation="vertical"
                android:id="@id/left_drawer"
                android:background="@android:color/white"
                android:descendantFocusability="blocksDescendants"
                android:layout_width="240.0dip"
                android:layout_height="fill_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0dip"
                android:choiceMode="singleChoice">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@id/settings_button"
                        android:background="@null"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:src="@drawable/ic_settings"
                        android:contentDescription="@string/action_open_settings" />
                </LinearLayout>
                <ListView
                    android:layout_gravity="top"
                    android:id="@id/terminal_sessions_list"
                    android:longClickable="true"
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:choiceMode="singleChoice"
                    android:layout_weight="1.0" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="?android:buttonBarStyle">
                    <Button
                        android:id="@id/toggle_keyboard_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_toggle_soft_keyboard"
                        android:layout_weight="1.0"
                        style="?android:buttonBarButtonStyle" />
                    <Button
                        android:id="@id/new_session_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_new_session"
                        android:layout_weight="1.0"
                        style="?android:buttonBarButtonStyle" />
                </LinearLayout>
            </LinearLayout>
        </androidx.drawerlayout.widget.DrawerLayout>
        <androidx.viewpager.widget.ViewPager
            android:id="@id/terminal_toolbar_view_pager"
            android:background="@color/black"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="37.5dip"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <View
        android:id="@id/activity_termux_bottom_space_view"
        android:background="@android:color/transparent"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip" />
</com.termux.app.terminal.TermuxActivityRootView>